--- a/manager/style2.css
+++ b/manager/style2.css
@@ -7,7 +7,7 @@
 .main{
     font-size: 1.2rem;
     width: 100vw;
-    height: 100vh;
+    height: 150vh;
     background: linear-gradient(to right, #0818ff, #00ffff);
     overflow: hidden;
 }
@@ -82,5 +82,11 @@ nav {
     width: 100%; /* 固定値ではなく、画面幅に合わせる */
     max-width: 1200px; /* 最大幅を指定 */
     margin: 0 auto;
-  }
+}
+
+.karu-seru {
+    position: absolute;
+    top: 45%;
+    left: 36%;
+}
   
